# RichWordSegmentor

./: CMakeLists.txt  Options.h  README.md  STDSeg.cpp  STDSeg.h  cleanall.sh  demo.sh
basic/: Action.h  Argument_helper.h  Instance.h  InstanceReader.h  InstanceWriter.h  NewConcat.h  Pipe.h  Reader.h  SegLookupTable.h  Utf.h  Writer.h  io.h
example/: dev.debug  option.STD  test.debug  train.debug
feature/: DenseFeature.h  DenseFeatureChar.h  DenseFeatureExtraction.h  DenseFeatureExtraction_nolast.h  DenseFeatureForward.h  DenseFeatureNew.h  Feature.h  FeatureExtraction.h  HiddenForward.h
model/: CharLSTMSTD.h  CharLSTMSTD_noword.h
state/: NeuralState.h  State.h
